Colaboratory を使用して作成しました

--- a/Python入門テキスト3.ipynb
+++ b/Python入門テキスト3.ipynb
@@ -219,7 +219,8 @@
       },
       "outputs": [],
       "source": [
-        "waru = float(input('１０を割る数を入力してください'))"
+        "waru = float(input('１０を割る数を入力してください'))\n",
+        "print(10/waru)"
       ]
     },
     {
@@ -569,7 +570,7 @@
       "collapsed_sections": [],
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJQnrAy0D5gW8+imuiwo6B",
+      "authorship_tag": "ABX9TyNNszkrg13IysxN4+DfzFtd",
       "include_colab_link": true
     },
     "kernelspec": {
