Colaboratory を使用して作成しました

--- a/Python入門テキスト4.ipynb
+++ b/Python入門テキスト4.ipynb
@@ -43,10 +43,29 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "t1bc9NRRJj_P"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t1bc9NRRJj_P",
+        "outputId": "17b8638e-9883-4c80-b0a1-d1b28ea31fb5"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ],
+      "source": [
+        "for num in range(5):\n",
+        "    print(num)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -61,10 +80,25 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ESgND6enhHBm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ESgND6enhHBm",
+        "outputId": "62bf9061-a395-4a3a-9fdc-bbc0416fb10c"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 2, 3, 4]\n"
+          ]
+        }
+      ],
+      "source": [
+        "r = range(5)\n",
+        "print(list(r))"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -85,10 +119,28 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "mZnjpZkvexNo"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mZnjpZkvexNo",
+        "outputId": "4e60547e-22f5-4317-f30e-32e45f55d597"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ],
+      "source": [
+        "for num in range(1, 5):\n",
+        "    print(num)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -108,10 +160,27 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SeLJzx_Ge48D"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SeLJzx_Ge48D",
+        "outputId": "246776a9-f348-4c83-b28f-abf2be1956e3"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "5\n",
+            "7\n"
+          ]
+        }
+      ],
+      "source": [
+        "for num in range(3, 8, 2):\n",
+        "    print(num)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -840,7 +909,7 @@
       "collapsed_sections": [],
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOx1yhLAY3p1s/EhJuWVE3s",
+      "authorship_tag": "ABX9TyOg7gZvsZym7dyB6aBwjHOm",
       "include_colab_link": true
     },
     "kernelspec": {
