Colaboratory を使用して作成しました

--- a/Python入門テキスト6.ipynb
+++ b/Python入門テキスト6.ipynb
@@ -65,13 +65,103 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# mutable(変更可)とimmutable(変更不可)の補足\n",
+        "\n",
+        "これまで習ってきた型でmutableはlistのみであり，\n",
+        "tuple, str(文字列), int(整数), float(浮動小数), bool(真偽)などは全てimmutableです。\n",
+        "\n",
+        "しかし例えば，以下ではimmutableなのに値を変えることができます。"
+      ],
+      "metadata": {
+        "id": "tgM8Q35utBVQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10      #aに10を代入\n",
+        "a = int(a)  #変数aは整数型なのでimmutable\n",
+        "print(a)\n",
+        "\n",
+        "a = 12 #aに違う値である12を代入\n",
+        "print(a)"
+      ],
+      "metadata": {
+        "id": "f3fQH2AzvDwG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "immutableというのは，オブジェクトのid番号が変更不可という意味です。つまり，箱を同じままで値を変える事ができないという意味です。"
+      ],
+      "metadata": {
+        "id": "1g20TWiK2pXA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10      #aに10を代入\n",
+        "a = int(a)  #変数aは整数型なのでimmutable\n",
+        "print(id(a))\n",
+        "\n",
+        "a = 12 #aに違う値である12を代入\n",
+        "print(id(a))"
+      ],
+      "metadata": {
+        "id": "S3pmAWWVvytt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [10]      #aはリスト型なのでmutable\n",
+        "print(a)\n",
+        "print(id(a))\n",
+        "\n",
+        "a.append(12)\n",
+        "print(a)\n",
+        "print(id(a))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bKEAEsQVwQQr",
+        "outputId": "e9673c74-4e98-4d0a-b4c2-8725ca9eb6bc"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10]\n",
+            "139637485892624\n",
+            "[10, 12]\n",
+            "139637485892624\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9st5zllwdFnm"
       },
       "source": [
         "---\n",
         "# 6-2 辞書\n",
-        "辞書は，「キー」と「値」を対応づけるデータで，以下の書式で書きます。\n",
+        "辞書は，リストと同様にmutableです。\n",
+        "\n",
+        "「キー」と「値」を対応づけるデータで，以下の書式で書きます。\n",
         "\n",
         "````Python\n",
         "{キー1:値1}\n",
@@ -95,6 +185,30 @@
       "source": [
         "{'いちごケーキ':350, 'チーズケーキ':400, '抹茶ケーキ':450} == {'抹茶ケーキ':450, 'いちごケーキ':350, 'チーズケーキ':400}"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# リストの場合\n",
+        "['いちごケーキ', 'チーズケーキ', '抹茶ケーキ'] ==['チーズケーキ', 'いちごケーキ', '抹茶ケーキ']"
+      ],
+      "metadata": {
+        "id": "KorsOVQy3gf-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#タプルの場合\n",
+        "('いちごケーキ', 'チーズケーキ', '抹茶ケーキ') ==('チーズケーキ', 'いちごケーキ', '抹茶ケーキ')"
+      ],
+      "metadata": {
+        "id": "pQ0SdIUy3slg"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -376,14 +490,14 @@
         "tax_list   = {'いちごケーキ':0.08, 'チーズケーキ':0.08, '抹茶ケーキ':0.08, 'ガトーショコラ':0.08, 'ティラミス':0.08, 'モンブラン':0.08,\n",
         "             '紙皿':0.10, 'フォーク':0.10}\n",
         "\n",
-        "my_cart = ['いちごケーキ', 'ガトーショコラ', '紙皿']\n"
+        "my_cart = ['いちごケーキ', 'ガトーショコラ', '紙皿']"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
