Colaboratory を使用して作成しました

--- a/Python入門テキスト8.ipynb
+++ b/Python入門テキスト8.ipynb
@@ -22,14 +22,14 @@
         "\n",
         "`print()`, `input()`等の組み込み関数は、プログラム中で何の指定もせずに使用することができました。\\\n",
         "Pythonにはこれ以外にも、標準ライブラリーや外部ライブラリーとして、多くの関数等が用意されています。\n",
-        "![](https://github.com/YukiAoki-GU/Python_beginners/blob/main/images/library_1.png?raw=1)\n",
+        "![](images/library_1.png)\n",
         "\n",
         "標準ライブラリーやインストール済の外部ライブラリーの関数等を利用するためには、`import`文で、「パッケージ」や「モジュール」を読み込みます。\n",
         "\n",
         "インストールされていない「パッケージ」や「ライブラリー」を利用するには、まずそれらをインストールします。\n",
         "\n",
         "「ライブラリー」、「パッケージ」、「モジュール」の用語は混同して使われることが多いのですが、以下の図のようになります。\n",
-        "![](https://github.com/YukiAoki-GU/Python_beginners/blob/main/images/library_2.png?raw=1)\n",
+        "![](images/library_2.png)\n",
         "\n",
         "関数等を定義したプログラムを一つのファイルとして保存したものが「モジュール」になります。\n",
         "\n",
@@ -126,24 +126,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WHiFH_zvm1gE",
-        "outputId": "e4a3314e-5c5d-4f9a-b42f-7364084b2907"
+        "id": "WHiFH_zvm1gE"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "3.141592653589793\n",
-            "2.718281828459045\n",
-            "0.7071067811865475\n",
-            "1.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import math\n",
         "\n",
@@ -166,78 +151,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hIl0agSgnM1E",
-        "outputId": "ca331bb3-8937-4c7d-86da-e663f8b52569"
+        "id": "hIl0agSgnM1E"
       },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "['__doc__',\n",
-              " '__loader__',\n",
-              " '__name__',\n",
-              " '__package__',\n",
-              " '__spec__',\n",
-              " 'acos',\n",
-              " 'acosh',\n",
-              " 'asin',\n",
-              " 'asinh',\n",
-              " 'atan',\n",
-              " 'atan2',\n",
-              " 'atanh',\n",
-              " 'ceil',\n",
-              " 'copysign',\n",
-              " 'cos',\n",
-              " 'cosh',\n",
-              " 'degrees',\n",
-              " 'e',\n",
-              " 'erf',\n",
-              " 'erfc',\n",
-              " 'exp',\n",
-              " 'expm1',\n",
-              " 'fabs',\n",
-              " 'factorial',\n",
-              " 'floor',\n",
-              " 'fmod',\n",
-              " 'frexp',\n",
-              " 'fsum',\n",
-              " 'gamma',\n",
-              " 'gcd',\n",
-              " 'hypot',\n",
-              " 'inf',\n",
-              " 'isclose',\n",
-              " 'isfinite',\n",
-              " 'isinf',\n",
-              " 'isnan',\n",
-              " 'ldexp',\n",
-              " 'lgamma',\n",
-              " 'log',\n",
-              " 'log10',\n",
-              " 'log1p',\n",
-              " 'log2',\n",
-              " 'modf',\n",
-              " 'nan',\n",
-              " 'pi',\n",
-              " 'pow',\n",
-              " 'radians',\n",
-              " 'remainder',\n",
-              " 'sin',\n",
-              " 'sinh',\n",
-              " 'sqrt',\n",
-              " 'tan',\n",
-              " 'tanh',\n",
-              " 'tau',\n",
-              " 'trunc']"
-            ]
-          },
-          "execution_count": 30,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "import math\n",
         "dir(math)"
@@ -265,7 +181,7 @@
       },
       "outputs": [],
       "source": [
-        "import math\n"
+        "import math"
       ]
     },
     {
@@ -376,41 +292,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "whBdeAgDnoDE",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "a2368c46-c5bd-4b2d-ad19-358750589186"
+        "id": "whBdeAgDnoDE"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['MAXYEAR',\n",
-              " 'MINYEAR',\n",
-              " '__builtins__',\n",
-              " '__cached__',\n",
-              " '__doc__',\n",
-              " '__file__',\n",
-              " '__loader__',\n",
-              " '__name__',\n",
-              " '__package__',\n",
-              " '__spec__',\n",
-              " 'date',\n",
-              " 'datetime',\n",
-              " 'datetime_CAPI',\n",
-              " 'sys',\n",
-              " 'time',\n",
-              " 'timedelta',\n",
-              " 'timezone',\n",
-              " 'tzinfo']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
-        }
-      ],
+      "outputs": [],
       "source": [
         "import datetime\n",
         "\n",
@@ -436,24 +320,9 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "JW4Xuw6ZnsNf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "67dd690b-2108-4bce-83e7-f65097cc042e"
+        "id": "JW4Xuw6ZnsNf"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "現在の日付と時刻は 2022-10-22 02:51:55.513497\n",
-            "現在の日付と時刻は 2022 年 10 月 22 日 2 時 51 分 55 秒 513497\n",
-            "今日の日付は 2022-10-22\n",
-            "今日の日付は 2022 年 10 月 22 日\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import datetime as dt\n",
         "\n",
@@ -503,9 +372,123 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import datetime as dt"
+      ],
+      "metadata": {
+        "id": "FBUzdw5ytwaD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### randomモジュール\n",
+        "\n",
+        "randomモジュールは、乱数を発生させる標準モジュールです。。"
+      ],
+      "metadata": {
+        "id": "PfUpDm_hz7LL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "dir(random)"
+      ],
+      "metadata": {
+        "id": "JO_y6HsfuXpF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 0.0 <= x < 1.0でのfloat型の乱数を発生\n",
+        "x = random.random()\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "-2hzK8ZD0ib1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a <= x <= bでのfloat型の乱数を発生\n",
+        "a = 1.3\n",
+        "b = 4.5\n",
+        "x = random.uniform(a, b)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "uQZnZP-o067i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# a <= x <= bでのint型の乱数を発生\n",
+        "a = 3\n",
+        "b = 6\n",
+        "x = random.randint(a, b)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "e8PjOXya1cAn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 配列の中身をランダムに出力\n",
+        "cakes = ['いちごケーキ', 'チーズケーキ', '抹茶ケーキ', 'ガトーショコラ', 'ティラミス', 'モンブラン']\n",
+        "x = random.choice(cakes)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "pKZZHWhI1t67"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 配列の中身をシャッフル\n",
+        "cakes = ['いちごケーキ', 'チーズケーキ', '抹茶ケーキ', 'ガトーショコラ', 'ティラミス', 'モンブラン']\n",
+        "random.shuffle(cakes)\n",
+        "print(cakes)"
+      ],
+      "metadata": {
+        "id": "JThT8NDB2ueI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q: グー，チョキ，パーをランダムに出力しなさい。"
+      ],
+      "metadata": {
+        "id": "cNF0jjhL3SCg"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0YQ2u_gctvEn"
+        "id": "y-MgfKI73BM-"
       },
       "execution_count": null,
       "outputs": []
@@ -515,7 +498,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeSYH/CZlqHKWs/QQvEGbs",
+      "authorship_tag": "ABX9TyO+ZjIZByJFdazbgwVObdMy",
       "include_colab_link": true
     },
     "kernelspec": {
