--- a/Python入門テキスト8.ipynb
+++ b/Python入門テキスト8.ipynb
@@ -22,14 +22,14 @@
         "\n",
         "`print()`, `input()`等の組み込み関数は、プログラム中で何の指定もせずに使用することができました。\\\n",
         "Pythonにはこれ以外にも、標準ライブラリーや外部ライブラリーとして、多くの関数等が用意されています。\n",
-        "![](images/library_1.png)\n",
+        "![](https://github.com/YukiAoki-GU/Python_beginners/blob/main/images/library_1.png?raw=1)\n",
         "\n",
         "標準ライブラリーやインストール済の外部ライブラリーの関数等を利用するためには、`import`文で、「パッケージ」や「モジュール」を読み込みます。\n",
         "\n",
         "インストールされていない「パッケージ」や「ライブラリー」を利用するには、まずそれらをインストールします。\n",
         "\n",
         "「ライブラリー」、「パッケージ」、「モジュール」の用語は混同して使われることが多いのですが、以下の図のようになります。\n",
-        "![](images/library_2.png)\n",
+        "![](https://github.com/YukiAoki-GU/Python_beginners/blob/main/images/library_2.png?raw=1)\n",
         "\n",
         "関数等を定義したプログラムを一つのファイルとして保存したものが「モジュール」になります。\n",
         "\n",
@@ -478,7 +478,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q: グー，チョキ，パーをランダムに出力しなさい。"
+        "#演習8\n",
+        "グー，チョキ，パーをランダムに出力しなさい。"
       ],
       "metadata": {
         "id": "cNF0jjhL3SCg"
@@ -498,7 +499,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+ZjIZByJFdazbgwVObdMy",
+      "authorship_tag": "ABX9TyO5JvFWBcuac6tWAo/q6JsW",
       "include_colab_link": true
     },
     "kernelspec": {
