--- a/Python入門テキスト9.ipynb
+++ b/Python入門テキスト9.ipynb
@@ -93,9 +93,10 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "\n",
-        "a = np.array([1, 2, 3])\n",
-        "print(a)\n"
+        "b = [1, 2, 3]\n",
+        "a = np.array(b)\n",
+        "print(a)\n",
+        "print(b)\n"
       ]
     },
     {
@@ -161,16 +162,17 @@
       },
       "outputs": [],
       "source": [
-        "# import numpy as np\n",
+        "import numpy as np\n",
         "\n",
         "list_a = [1, 2, 3]\n",
         "list_b = [1, 1.2, 3.1415]\n",
         "list_c = ['abc', 1, 1.1]\n",
         "\n",
+        "\n",
         "array_a = np.array(list_a)\n",
         "array_b = np.array(list_b)\n",
         "array_c = np.array(list_c)\n",
-        "\n",
+        "print(type(array_c[2]))\n",
         "print('list_a :', list_a)\n",
         "print('list_b :', list_b)\n",
         "print('list_c :', list_c)\n",
@@ -372,7 +374,7 @@
       "source": [
         "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
         "print(a)\n",
-        "print(a.tolist())\n",
+        "print(a.transpose())\n",
         "print(a)"
       ]
     },
@@ -584,7 +586,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVOCEh50IR2z8viV8bKhuS",
+      "authorship_tag": "ABX9TyNCd2ozy99EP+XXq4Vnq+wF",
       "include_colab_link": true
     },
     "kernelspec": {
