Colaboratory を使用して作成しました

--- a/Python入門テキスト9.ipynb
+++ b/Python入門テキスト9.ipynb
@@ -374,8 +374,7 @@
       "source": [
         "a = np.array([[1, 2, 3], [4, 5, 6]])\n",
         "print(a)\n",
-        "print(a.transpose())\n",
-        "print(a)"
+        "print(a.transpose())"
       ]
     },
     {
@@ -586,7 +585,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCd2ozy99EP+XXq4Vnq+wF",
+      "authorship_tag": "ABX9TyO64VZH+SLq+twUy8iEptEw",
       "include_colab_link": true
     },
     "kernelspec": {
