Colaboratory を使用して作成しました

--- a/Python入門テキスト10.ipynb
+++ b/Python入門テキスト10.ipynb
@@ -71,10 +71,11 @@
       "source": [
         "import pandas as pd\n",
         "\n",
-        "products_s = pd.Series(['いちごケーキ', 'チーズケーキ', '抹茶ケーキ', 'ガトーショコラ', 'ティラミス', 'モンブラン'])\n",
+        "cakes_list = ['いちごケーキ', 'チーズケーキ', '抹茶ケーキ', 'ガトーショコラ', 'ティラミス', 'モンブラン']\n",
+        "products_s = pd.Series(cakes_list)\n",
         "\n",
         "prices_s = pd.Series((350, 400, 450, 470, 500, 370))\n",
-        "\n",
+        "print(cakes_list)\n",
         "print(products_s)\n",
         "print(prices_s)"
       ]
@@ -153,7 +154,7 @@
       },
       "outputs": [],
       "source": [
-        "#import pandas as pd\n",
+        "import pandas as pd\n",
         "\n",
         "cakes_list = ['いちごケーキ', 'チーズケーキ', '抹茶ケーキ', 'ガトーショコラ', 'ティラミス', 'モンブラン']\n",
         "price_list = [350, 400, 450, 470, 500, 370]\n",
@@ -162,13 +163,6 @@
         "\n",
         "print(cakes_df)"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "VLuDr0SmAFpd"
-      },
-      "source": []
     },
     {
       "cell_type": "markdown",
@@ -399,11 +393,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "cakes_df[0:3]"
+      ],
       "metadata": {
-        "id": "FBc2Kn6sA_ZI"
+        "id": "C70TbRg6rSdE"
       },
-      "source": []
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -485,7 +483,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXfNtIJN21GtSYtk5xfQ1F",
+      "authorship_tag": "ABX9TyOj0c+1li/gjNMmbSuIVv2P",
       "include_colab_link": true
     },
     "kernelspec": {
