Colaboratory を使用して作成しました

--- a/Python入門テキスト10.ipynb
+++ b/Python入門テキスト10.ipynb
@@ -477,13 +477,146 @@
       "source": [
         "cakes_df.loc[2:4, '価格']"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 演習問題10-1\n",
+        "\n",
+        "下のようなデータフレームを作成しなさい。\n",
+        "```\n",
+        "      0    1\n",
+        "0   ケーキ  400\n",
+        "1   りんご  200\n",
+        "2   アイス  120\n",
+        "3   みかん   30\n",
+        "4  どらやき  140\n",
+        "5   おはぎ  110\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "i6Ul_CdX2aaM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7Y-aYekU2c-T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#演習問題10-2\n",
+        "行番号を以下のように変えなさい。\n",
+        "```\n",
+        "        0    1\n",
+        "洋菓子   ケーキ  400\n",
+        "果物    りんご  200\n",
+        "洋菓子   アイス  120\n",
+        "果物    みかん   30\n",
+        "和菓子  どらやき  140\n",
+        "和菓子   おはぎ  110\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "BVntdPBb2e8p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lLXZ6pUp2iUH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#演習問題10-3\n",
+        "列番号を以下の様に変えなさい\n",
+        "```\n",
+        "       名前   価格\n",
+        "洋菓子   ケーキ  400\n",
+        "果物    りんご  200\n",
+        "洋菓子   アイス  120\n",
+        "果物    みかん   30\n",
+        "和菓子  どらやき  140\n",
+        "和菓子   おはぎ  110\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "9VskN0fh2jCs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YndoM-is2lxl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#演習問題10-4\n",
+        "loc[]を使い以下の様に果物だけを出力しなさい\n",
+        "```\n",
+        "     名前   価格\n",
+        "果物  りんご  200\n",
+        "果物  みかん   30\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "OyykQ4w72mYT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "TCfpXXM_2opG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 演習問題10-5\n",
+        "loc[]を使い，以下の様に果物の名前だけを出力しなさい\n",
+        "```\n",
+        "果物    りんご\n",
+        "果物    みかん\n",
+        "Name: 名前, dtype: object\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "wzZuR2aD2pQN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "rGnNA_1p2sRI"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOj0c+1li/gjNMmbSuIVv2P",
+      "authorship_tag": "ABX9TyML7/mRZdHwqUUcIfNqN6DC",
       "include_colab_link": true
     },
     "kernelspec": {
