Colaboratory を使用して作成しました

--- a/Python入門演習1.ipynb
+++ b/Python入門演習1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyODdrNPOvSVu4Ln7SDwVyfH",
+      "authorship_tag": "ABX9TyNW1PuiYDcndZhO+6oFpnlF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,32 +45,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "5pGSNcMcOpUr",
-        "outputId": "a439dc4e-613a-48bc-f12a-922ba3a5a678",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "5pGSNcMcOpUr"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3になったので終了します\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "a = [1, 2, 3, 4, 5]\n",
-        "for num in a:\n",
-        "    if num == 3:\n",
-        "        print('3になったので終了します')\n",
-        "        break\n",
-        "    print(num)"
+        "a = [1, 2, 3, 4, 5]\n"
       ]
     },
     {
@@ -139,83 +120,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "for i in range(1,51):\n",
-        "  if i % 2 == 0 and i % 3 == 0:\n",
-        "    print('2と3の倍数')\n",
-        "  elif i % 2 == 0:\n",
-        "    print('偶数')\n",
-        "  elif i % 3 == 0:\n",
-        "    print('3の倍数')\n",
-        "  else:\n",
-        "    print(i)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "_cWxkfH3sejk",
-        "outputId": "f86bd035-8d59-4450-b694-abbbb2a49203",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "_cWxkfH3sejk"
       },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "5\n",
-            "2と3の倍数\n",
-            "7\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "11\n",
-            "2と3の倍数\n",
-            "13\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "17\n",
-            "2と3の倍数\n",
-            "19\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "23\n",
-            "2と3の倍数\n",
-            "25\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "29\n",
-            "2と3の倍数\n",
-            "31\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "35\n",
-            "2と3の倍数\n",
-            "37\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "41\n",
-            "2と3の倍数\n",
-            "43\n",
-            "偶数\n",
-            "3の倍数\n",
-            "偶数\n",
-            "47\n",
-            "2と3の倍数\n",
-            "49\n",
-            "偶数\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -238,33 +148,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a = 0\n",
-        "while a < 5:\n",
-        "    a +=1\n",
-        "    print(a)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "svXHlTC7XmBF",
-        "outputId": "eafc7620-89b6-4854-9152-d2fbac98aa35",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "svXHlTC7XmBF"
       },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -283,28 +172,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a = [1, 2, 3, 4, 5]\n",
-        "result = [i for i in a]\n",
-        "print(result)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "2D5jijeCtAmo",
-        "outputId": "a76e31d1-e533-4283-e53e-7bffa4321aa0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2D5jijeCtAmo"
       },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1, 2, 3, 4, 5]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -323,28 +196,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a = [1, 2, 3, 4, 5]\n",
-        "result = [i for i in a if i % 2 == 0]\n",
-        "print(result)"
-      ],
+      "source": [],
       "metadata": {
-        "id": "fuewTRuduxnE",
-        "outputId": "d10c3289-caff-4381-c79e-0bb543049f41",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "fuewTRuduxnE"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[2, 4]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -365,26 +222,13 @@
       "cell_type": "code",
       "source": [
         "a = (1, 2, 3)\n",
-        "b=(7, 8, 9)\n",
-        "print(a + b)"
+        "b=(7, 8, 9)"
       ],
       "metadata": {
-        "id": "Tae-SbfVvfGh",
-        "outputId": "4e8ea0c9-f378-4514-b39c-3434a3a0803f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Tae-SbfVvfGh"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(1, 2, 3, 7, 8, 9)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -403,27 +247,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "a = (1, 2, 3)\n",
-        "print(a[1])"
-      ],
+      "source": [],
       "metadata": {
-        "id": "TliH0KlIwt_u",
-        "outputId": "734c5fc0-c2bd-4b7b-b8ff-6623619fd026",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "TliH0KlIwt_u"
       },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -443,33 +272,13 @@
     {
       "cell_type": "code",
       "source": [
-        "b = ('Tokyo', 'Osaka', 'Nagoya')\n",
-        "max = 0\n",
-        "\n",
-        "for i in b:\n",
-        "    if len(i) > max:\n",
-        "        max = len(i)\n",
-        "        city_name = i\n",
-        "\n",
-        "print(city_name)"
+        "b = ('Tokyo', 'Osaka', 'Nagoya')\n"
       ],
       "metadata": {
-        "id": "PETlB15Nx135",
-        "outputId": "81aec3c0-6a13-4fe4-b4c4-d7dcf5a62cf4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "PETlB15Nx135"
       },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Nagoya\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -490,28 +299,13 @@
     {
       "cell_type": "code",
       "source": [
-        "c = {'a':1, 'b':2, 'c':3, 'd':4, 'e':5}\n",
-        "print(list(c.keys()))\n",
-        "print(list(c.values()))"
+        "c = {'a':1, 'b':2, 'c':3, 'd':4, 'e':5}\n"
       ],
       "metadata": {
-        "id": "uIzIxetoyoyZ",
-        "outputId": "0c167f0f-bbec-41ad-8211-8c672ee28a4a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "uIzIxetoyoyZ"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['a', 'b', 'c', 'd', 'e']\n",
-            "[1, 2, 3, 4, 5]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -531,26 +325,13 @@
     {
       "cell_type": "code",
       "source": [
-        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n",
-        "print(list(c.items()))"
+        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}"
       ],
       "metadata": {
-        "id": "bJejwOYD12VC",
-        "outputId": "232f0876-8209-4f30-e3fa-e2950c155d17",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bJejwOYD12VC"
       },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[('a', 1), ('b', 2), ('c', 3), ('d', 4), ('e', 5)]\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -570,26 +351,13 @@
     {
       "cell_type": "code",
       "source": [
-        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n",
-        "print(c['d'])"
+        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}"
       ],
       "metadata": {
-        "id": "Y7DruOK1232d",
-        "outputId": "2899b212-1099-459b-e720-388e2309a0b0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Y7DruOK1232d"
       },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "4\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -609,27 +377,13 @@
     {
       "cell_type": "code",
       "source": [
-        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n",
-        "c['f'] = 6\n",
-        "print(c)"
+        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}"
       ],
       "metadata": {
-        "id": "1B5MEkOV4pgz",
-        "outputId": "1b7c762b-99df-480e-b803-51d1e989e786",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1B5MEkOV4pgz"
       },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5, 'f': 6}\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -654,9 +408,7 @@
     {
       "cell_type": "code",
       "source": [
-        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n",
-        "for ki in c.keys():\n",
-        "    print(ki)"
+        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}"
       ],
       "metadata": {
         "id": "R46M_E3y5V1s",
@@ -665,7 +417,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -702,31 +454,13 @@
     {
       "cell_type": "code",
       "source": [
-        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n",
-        "for atai in c.values():\n",
-        "    print(atai)"
+        "c = {'a': 1, 'b': 2, 'c': 3, 'd': 4, 'e': 5}\n"
       ],
       "metadata": {
-        "id": "KZpRwB0UViKI",
-        "outputId": "19ea16d8-74f2-4105-cba1-f5ef1768530e",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "KZpRwB0UViKI"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
